# pcre-ocaml-js

./: .gitignore  build_libpcre.sh  dune  libpcre.js  libpcre.wasm  makefile-wasm.patch  pcre-stubs-js.opam  pcre_stubs_js.opam  prefix.js  runtime.js
pcre-8.45/: Makefile  Makefile.wasm  Makefile2  config.h  config.status  libpcre.js  libtool
pcre-8.45/.deps/: libpcre_la-pcre_byte_order.Plo  libpcre_la-pcre_chartables.Plo  libpcre_la-pcre_compile.Plo  libpcre_la-pcre_config.Plo  libpcre_la-pcre_dfa_exec.Plo  libpcre_la-pcre_exec.Plo  libpcre_la-pcre_fullinfo.Plo  libpcre_la-pcre_get.Plo  libpcre_la-pcre_globals.Plo  libpcre_la-pcre_jit_compile.Plo  libpcre_la-pcre_maketables.Plo  libpcre_la-pcre_newline.Plo  libpcre_la-pcre_ord2utf8.Plo  libpcre_la-pcre_refcount.Plo  libpcre_la-pcre_string_utils.Plo  libpcre_la-pcre_study.Plo  libpcre_la-pcre_tables.Plo  libpcre_la-pcre_ucd.Plo  libpcre_la-pcre_valid_utf8.Plo  libpcre_la-pcre_version.Plo  libpcre_la-pcre_xclass.Plo
